--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "customize-cra": "^1.0.0",
     "firebase": "^9.17.1",
+    "json-server": "^0.17.3",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
@@ -26,6 +27,7 @@
   },
   "scripts": {
     "start": "react-app-rewired start",
+    "start-server": "json-server --watch db.json",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
